<resources>
    <string name="app_name">flashcards</string>
    <string name="Term">Term</string>
    <string name="Definition">Definition</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="definition">Definition</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="practice">Practice</string>
    <string name="frontCard">front</string>
    <string name="backCard">back</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="display_the_flashcards">display the flashcards</string>
    <string name="flip">Flip</string>
    <string name="nextPractice">Next</string>
    <string name="donePractice">Done</string>
    <string name="frondCard">front</string>
    <string name="no_flashcards">No flashcards available.</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete\n</string>
</resources>